MDEV-22377: Subquery in an [UPDATE] query uses full scan instead of range

When doing IN->EXISTS rewrite, Item_in_subselect::inject_in_to_exists_cond
injects equalities into subquery's WHERE condition.

The problem is that build_equal_items() has already been called for the
subquery's WHERE, and tampering with the WHERE condition can prevent
equality propagation from working.

If the subquery's WHERE is an Item_cond_and with multiple equalities:
- Item_equal objects form a suffix sub-list of the list in WHERE's
  Item_cond_and::list. The suffix is stored in
  JOIN::cond_equal->current_level.
- Item_cond_and::m_cond_equal must also be preserved.

This patch makes inject_in_to_exists_cond() not to break these properties